Fixed clipping on mobile

--- a/main.css
+++ b/main.css
@@ -286,6 +286,11 @@ main {
     padding: 0 10vw 0 10vw;
 }
 
+iframe {
+    max-width: 60vw;
+    max-height: 70vw;
+}
+
 a:hover {
     text-decoration: underline;
     color: var(--secondary-color);
